💄 stats - fixed column chart labels being invisible

--- a/files/scss/_base.scss
+++ b/files/scss/_base.scss
@@ -309,6 +309,7 @@ a.button, a:has(> .tile), a:has(> .full-width) {
             grid-auto-flow: column !important;
             grid-template-columns: unset !important;
             grid-template-rows: 1fr 2em;
+            padding-top: 2em;
 
             & > .label {
                 text-align: center;
@@ -323,6 +324,7 @@ a.button, a:has(> .tile), a:has(> .full-width) {
                     position: relative;
 
                     & > .value-label {
+                        color: var(--fg);
                         position: absolute;
                         bottom: calc(100% + 0.5em); left: 0; right: 0;
                         text-align: center;
